--- a/page1.html
+++ b/page1.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Page 1</h1>
+    <h1> I puled from josh</h1>
     <p>This is page 1</p>
     <h1>Feature 1 was here</h1>
     <h1>Feature 2 was here</h1>
